# falcon

./: CMakeLists.txt  detail.cmake
cmake/: utils.cmake
engine/: CMakeLists.txt  datareader.cpp  debugger.cpp  itemdict.cpp
engine/builtin/: minmax.cpp
engine/classes/: classstringstream.cpp
engine/cm/: debugger.cpp
include/falcon/: debugger.h
modules/falcon/parser/: genparser.fal  grammar.fal
modules/falcon/parser/grammars/: basic_expr.fgd
modules/native/curl/: CMakeLists.txt
modules/native/feathers/: CMakeLists.txt
